# ia-tech-challenge-2

./: .env.example  README.md  pyproject.toml
data/: attendance_points.csv  distribution_center.csv
experiments/: run_experiments.py
experiments/outputs/: experiments_results.csv
src/: app.py
src/womens_health_route_optimizer/config/: __init__.py  settings.py
src/womens_health_route_optimizer/data/: __init__.py  loaders.py
src/womens_health_route_optimizer/domain/: __init__.py  enums.py  fleet.py  models.py
src/womens_health_route_optimizer/llm/: __init__.py  prompts.py  providers.py  report_generator.py
src/womens_health_route_optimizer/llm/templates/: instruction_manual.md  route_question.md  visit_plan.md
src/womens_health_route_optimizer/optimization/: __init__.py  fitness.py  operators.py  optimizer.py  simulation.py
src/womens_health_route_optimizer/ui/: __init__.py  components.py  sidebar.py  styles.css
src/womens_health_route_optimizer/utils/: __init__.py  distance.py  formatters.py
src/womens_health_route_optimizer/visualization/: __init__.py  folium_map.py
tests/: test_distance.py  test_fitness.py  test_fleet_optimization.py  test_loaders.py  test_operators.py  test_simulation.py
